# UltimateCG

./: CMakeLists.txt  main.c  monkey2.raw  objLists.c  objLists.h  rasterizer.c  rasterizer.h  transformations.c  transformations.h
